Bug 94960 - Chart type dialog is blank when 3d line chart is active
Summary: Chart type dialog is blank when 3d line chart is active
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
5.1.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Markus Mohrhard
URL:
Whiteboard: target:5.1.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2015-10-11 16:22 UTC by Yousuf Philips (jay) (retired)
Modified: 2016-10-25 19:21 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Yousuf Philips (jay) (retired) 2015-10-11 16:22:50 UTC
Steps:
1) Open Writer
2) Insert chart
3) Change chart type to Line > 3D Lines
4) Open chart type dialog again and it will be blank

Version: 5.1.0.0.alpha1+
Build ID: 143fb0a4b5d4ab69d4928299d8112ab95d99870a
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2015-10-11_00:06:41
Locale: en-US (en_US.UTF-8)
Comment 1 raal 2015-10-11 19:14:15 UTC
I can confirm with Version: 5.1.0.0.alpha1+
Build ID: 8273350ff48f198efc9dc9c5de5519b8cbdc0cb3
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2015-10-07_05:54:26

Works OK with LibreOffice 4.4.2.2, regression
Comment 2 Yousuf Philips (jay) (retired) 2015-10-14 12:21:58 UTC
Fine in 5.0 daily.

Version: 5.0.3.0.0+
Build ID: fb38840771bc4c58de9bd62b960d0f2154fac394
TinderBox: Linux-rpm_deb-x86_64@46-TDF, Branch:libreoffice-5-0, Time: 2015-10-07_08:03:22
Locale: en-US (en_US.UTF-8)
Comment 3 raal 2015-10-15 05:37:25 UTC
This seems to have begun at the below commit.
Adding Cc: to markus.mohrhard@googlemail.com ; Could you possibly take a look at this
one? Thanks
 d4ec8dfe83bc7f243a9b6b3e80596964adb22a68 is the first bad commit
commit d4ec8dfe83bc7f243a9b6b3e80596964adb22a68
Author: Norbert Thiebaud <nthiebaud@gmail.com>
Date:   Mon Aug 3 22:39:31 2015 -0700

    source 84254268bf5902d2405815970218e1893a7a673e

    source 84254268bf5902d2405815970218e1893a7a673e
	
author	Markus Mohrhard <markus.mohrhard@googlemail.com>	2015-07-29 13:33:18 (GMT)
committer	Markus Mohrhard <markus.mohrhard@googlemail.com>	2015-07-30 03:45:24 (GMT)
commit 84254268bf5902d2405815970218e1893a7a673e (patch)
Comment 4 Commit Notification 2015-10-18 12:53:34 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=51f10626e61fff74346e8315c2a42c7f45ef5170

tdf#94960, Revert "it is insane to not map line and ..."

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Robinson Tryon (qubit) 2015-12-17 10:34:24 UTC Comment hidden (obsolete)