tdf#94960, Revert "it is insane to not map line and ..."

This reverts commit 84254268bf5902d2405815970218e1893a7a673e.

Change-Id: Id99bc1f44a4e23daaf2f12585981c0be66cbeda5